@@ -454,6 +454,7 @@ if "PRESSURE" in board.devices:
 if "SPIFLASH" in board.devices:
   codeOut("#define SPIFLASH_BASE 0x40000000UL")
   codeOut("#define SPIFLASH_PAGESIZE 4096")
+  codeOut("#define SPIFLASH_LENGTH "+str(board.devices["SPIFLASH"]["size"]))
   codeOutDevicePins("SPIFLASH", "SPIFLASH")
 
 for device in ["USB","SD","LCD","JTAG","ESP8266","IR"]:
